fix profile banner alignment issues

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -95,6 +95,10 @@ ul {
           z-index:1;
         }
   }
+  .nav-item-pusher { margin-left: 80px; }
+  .user-name { font-size: 1.2em;
+               font-weight: bold;
+               text-transform: capitalize;}
 }
 
 #content {
